--- a/topster-manager.css
+++ b/topster-manager.css
@@ -40,7 +40,7 @@ input[type="range"]:hover {
     filter: brightness(1.3);
 }
 
-input[type="text"] {
+input[type="text"], input[type='number'] {
     background-color: var(--accent-color);
     color: white;
     border: none;
@@ -51,12 +51,13 @@ input[type="text"] {
 
     margin-right: 2px;
     margin-left: 2px;
+    appearance: textfield;
 }
-input[type="text"]:focus {
+input[type="text"]:focus, input[type='number']:focus {
     outline: none;
     filter: brightness(1.3);
 }
-input[type="text"]:disabled {
+input[type="text"]:disabled, input[type='number']:disabled {
     filter: brightness(0.7);
 }
 
