--- a/topster-manager.css
+++ b/topster-manager.css
@@ -14,8 +14,15 @@
 }
 
 body {
-    background-color: rgb(55, 63, 75);
     font-family: Ubuntu;
+    
+    /* hide page until loaded */
+    background-color: var(--main-color);
+    opacity: 0.0;
+}
+body.fade {
+    opacity: 1.0;
+    transition: all 0.5s;
 }
 
 /* separate inputs from each other a little bit */
